[project]
name = "apigee-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.112.0",
    "hatchling>=1.30.1",
    "influxdb-client>=1.50.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
